# dynaflow-launcher

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  past_commits.txt  sonar-project.properties
sources/: CMakeLists.txt  Context.cpp  Context.h  Log.cpp  Log.h  Options.cpp  Options.h  main.cpp
sources/Algo/: CMakeLists.txt
sources/Algo/include/: Algo.h  AlgorithmsResults.h  ContingencyValidationAlgorithm.h  DynModelDefinitionAlgorithm.h  DynModelFilterAlgorithm.h  GeneratorDefinitionAlgorithm.h  HVDCDefinitionAlgorithm.h  LineDefinitionAlgorithm.h  LoadDefinitionAlgorithm.h  MainConnexComponentAlgorithm.h  SVarCDefinitionAlgorithm.h  ShuntDefinitionAlgorithm.h  SlackNodeAlgorithm.h  TransfoDefinitionAlgorithm.h
sources/Algo/src/: Algo.cpp  ContingencyValidationAlgorithm.cpp  DynModelDefinitionAlgorithm.cpp  DynModelFilterAlgorithm.cpp  GeneratorDefinitionAlgorithm.cpp  HVDCDefinitionAlgorithm.cpp  LineDefinitionAlgorithm.cpp  LoadDefinitionAlgorithm.cpp  MainConnexComponentAlgorithm.cpp  SVarCDefinitionAlgorithm.cpp  ShuntDefinitionAlgorithm.cpp  SlackNodeAlgorithm.cpp  TransfoDefinitionAlgorithm.cpp
sources/Common/: CMakeLists.txt
sources/Common/include/: Constants.h  Dico.h  Log.h  Message.hpp  Options.h  ZipErrorMessage.h
sources/Common/scripts/: generateMessages.py
sources/Common/src/: Dico.cpp  Log.cpp  Options.cpp  ZipErrorMessage.cpp
sources/Inputs/: CMakeLists.txt
sources/Inputs/include/: AssemblingDataBase.h  AssemblingXmlDocument.h  AssemblyXmlDocument.h  AutomatonConfigurationManager.h  Behaviours.h  Configuration.h  Contingencies.h  ContingenciesManager.h  DynamicDataBaseManager.h  HvdcLine.h  NetworkManager.h  Node.h  SettingDataBase.h  SettingXmlDocument.h  SettingsXmlDocument.h  SimulationParams.h  XsdPath.hpp
sources/Inputs/src/: AssemblingDataBase.cpp  AssemblingXmlDocument.cpp  AssemblyXmlDocument.cpp  AutomatonConfigurationManager.cpp  Configuration.cpp  Contingencies.cpp  ContingenciesManager.cpp  DynamicDataBaseManager.cpp  HvdcLine.cpp  NetworkManager.cpp  Node.cpp  SettingDataBase.cpp  SettingXmlDocument.cpp  SettingsXmlDocument.cpp
sources/Outputs/: CMakeLists.txt
sources/Outputs/include/: Constants.h  Diagram.h  Dyd.h  DydCommon.h  DydDynModel.h  DydEvent.h  DydGenerator.h  DydHvdc.h  DydLoads.h  DydSVarC.h  DydVRRemote.h  Job.h  Network.h  OutputsConstants.h  Par.h  ParCommon.h  ParDynModel.h  ParEvent.h  ParGenerator.h  ParHvdc.h  ParLoads.h  ParNetwork.h  ParSVarC.h  ParVRRemote.h  Solver.h
sources/Outputs/src/: Constants.cpp  Constants.h  Diagram.cpp  Dyd.cpp  DydDynModel.cpp  DydEvent.cpp  DydGenerator.cpp  DydHvdc.cpp  DydLoads.cpp  DydSVarC.cpp  DydVRRemote.cpp  Job.cpp  Network.cpp  OutputsConstants.cpp  Par.cpp  ParCommon.hpp  ParDynModel.cpp  ParEvent.cpp  ParGenerator.cpp  ParHvdc.cpp  ParLoads.cpp  ParNetwork.cpp  ParSVarC.cpp  ParVRRemote.cpp  Solver.cpp
sources/common/include/: Log.h  Options.h
sources/common/src/: Log.cpp  Options.cpp
sources/options/: CMakeLists.txt
sources/options/include/: Options.h
sources/options/src/: Options.cpp
tests/: CMakeLists.txt  Tests.cpp  Tests.h  initXml.cpp
tests/algo/: CMakeLists.txt  TestAlgo.cpp  TestAlgoAutomaton.cpp  TestAlgoDynModel.cpp  TestConnexityAlgo.cpp  TestContingencyAlgo.cpp  TestDynModelFilterAlgo.cpp  TestGeneratorsAlgo.cpp  TestHvdcLineAlgo.cpp  TestLinesAlgo.cpp  TestLoadsAlgo.cpp  TestShuntCounterAlgo.cpp  TestSlackNodeAlgo.cpp  TestStaticVarCompensatorAlgo.cpp
tests/algo/common/: CMakeLists.txt
tests/algo/res/: DummyLibFile.cpp  IEEE14_disconnected_shunts.iidm  SecondaryVoltageControlSimp.cpp  assembling.xml  assembling_svc.xml  assembling_test_generator.xml  assembling_test_generator_rpcl2.xml  assembling_test_hvdc.xml  assembling_test_hvdc_side2.xml  setting.xml
tests/common/: CMakeLists.txt  TestDico.cpp  TestMessage.cpp  TestOptions.cpp
tests/common/res/: test.dic
tests/inputs/: CMakeLists.txt  TestAssemblingXmlDocument.cpp  TestAssemblyXmlDocument.cpp  TestAutomatonConfigurationManager.cpp  TestConfig.cpp  TestDynamicDataBaseManager.cpp  TestNetworkManager.cpp  TestNode.cpp  TestSettingXmlDocument.cpp  TestSettingsXmlDocument.cpp
tests/inputs/res/: Generators.iidm  HvdcDangling.iidm  assembling.xml  assembling.xsd  assembling_dup_dynautoma.xml  assembling_dup_macrocon.xml  assembling_dup_multiassoc.xml  assembling_dup_singleassoc.xml  assembling_enrich_prop.xml  assembling_new_macrocon.xml  assembling_svc.xml  config.json  config_N.json  config_SA.json  config_SA_2.json  config_SA_dumpState.json  config_assembling_file_without_setting_file.json  config_caseinsensitive.json  config_criteria_notfound.json  config_flat.json  config_flat_activepowercompensation_p.json  config_setting_file_without_assembling_file.json  incorrect_config.json  incorrect_config_2.json  initial_conditions_NOK.iidm  initial_conditions_OK.iidm  initial_conditions_partially_OK.iidm  setting.xml  setting2.xml  setting_dynaflow.xsd  setting_error.xml
tests/main/: CMakeLists.txt  TestOptions.cpp
tests/main/res/: TestIIDM_distant_regulation.iidm  TestIIDM_hvdc.iidm  TestIIDM_hvdc_HvdcPQProp.iidm  TestIIDM_hvdc_HvdcPQPropDangling.iidm  TestIIDM_hvdc_HvdcPQPropDangling_diagrams.iidm  TestIIDM_hvdc_HvdcPQPropSwitch.iidm  TestIIDM_hvdc_HvdcPQProp_multiple_bus.iidm  TestIIDM_hvdc_HvdcPVDangling_HvdcPTanPhiDangling.iidm  TestIIDM_hvdc_HvdcPVDangling_HvdcPTanPhiDangling_diagrams.iidm  TestIIDM_hvdc_HvdcPV_HvdcPTanPhi.iidm  TestIIDM_hvdc_HvdcPV_HvdcPTanPhi_diagrams.iidm  TestIIDM_hvdc_dangling.iidm  TestIIDM_hvdc_diagrams.iidm  TestIIDM_hvdc_diagrams_flat_start.iidm  TestIIDM_hvdc_line_inverse.iidm  TestIIDM_hvdc_line_normal.iidm  TestIIDM_hvdc_svc_off.iidm  TestIIDM_launch_diagram_tfo.iidm  TestIIDM_launch_fail_generators.iidm  TestIIDM_launch_kGover.iidm  TestIIDM_launch_slack.iidm  TestIIDM_launch_svc_network.iidm  assembling_svc.xml  (+53 more)
tests/main_n_sa/: CMakeLists.txt
tests/main_sa/: CMakeLists.txt
tests/outputs/: CMakeLists.txt  TestDiagram.cpp  TestDyd.cpp  TestDydEvent.cpp  TestJob.cpp  TestPar.cpp  TestParEvent.cpp  TestSolverPar.cpp
(+574 files in other folders)
